writ-compiler/tests/snapshots/lowering_tests__dlg_choice_speaker_scope_isolation.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "test",
                name_span: 4..8,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Let {
                        mutable: false,
                        name: "_narrator",
                        name_span: 14..22,
                        ty: None,
                        value: GenericCall {
                            callee: MemberAccess {
                                object: Ident {
                                    name: "Entity",
                                    span: 14..22,
                                },
                                field: "getOrCreate",
                                field_span: 14..22,
                                span: 14..22,
                            },
                            type_args: [
                                Named {
                                    name: "Narrator",
                                    span: 14..22,
                                },
                            ],
                            args: [],
                            span: 14..22,
                        },
                        span: 14..22,
                    },
                    Let {
                        mutable: false,
                        name: "_player",
                        name_span: 41..47,
                        ty: None,
                        value: GenericCall {
                            callee: MemberAccess {
                                object: Ident {
                                    name: "Entity",
                                    span: 41..47,
                                },
                                field: "getOrCreate",
                                field_span: 41..47,
                                span: 41..47,
                            },
                            type_args: [
                                Named {
                                    name: "Player",
                                    span: 41..47,
                                },
                            ],
                            args: [],
                            span: 41..47,
                        },
                        span: 41..47,
                    },
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "choice",
                                span: 32..79,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: ArrayLit {
                                        elements: [
                                            Call {
                                                callee: Ident {
                                                    name: "ChoiceOption",
                                                    span: 34..61,
                                                },
                                                args: [
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "\"A\"",
                                                            span: 34..37,
                                                        },
                                                        span: 34..61,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "3a3bd28c",
                                                            span: 34..61,
                                                        },
                                                        span: 34..61,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: Lambda {
                                                            params: [],
                                                            return_type: None,
                                                            body: [
                                                                Expr {
                                                                    expr: Call {
                                                                        callee: Ident {
                                                                            name: "say",
                                                                            span: 40..59,
                                                                        },
                                                                        args: [
                                                                            AstArg {
                                                                                name: None,
                                                                                value: Ident {
                                                                                    name: "_player",
                                                                                    span: 41..47,
                                                                                },
                                                                                span: 40..59,
                                                                            },
                                                                            AstArg {
                                                                                name: None,
                                                                                value: StringLit {
                                                                                    value: "I choose A.",
                                                                                    span: 48..59,
                                                                                },
                                                                                span: 40..59,
                                                                            },
                                                                        ],
                                                                        span: 40..59,
                                                                    },
                                                                    span: 40..59,
                                                                },
                                                            ],
                                                            span: 34..61,
                                                        },
                                                        span: 34..61,
                                                    },
                                                ],
                                                span: 34..61,
                                            },
                                            Call {
                                                callee: Ident {
                                                    name: "ChoiceOption",
                                                    span: 62..77,
                                                },
                                                args: [
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "\"B\"",
                                                            span: 62..65,
                                                        },
                                                        span: 62..77,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: StringLit {
                                                            value: "0a0fc5db",
                                                            span: 62..77,
                                                        },
                                                        span: 62..77,
                                                    },
                                                    AstArg {
                                                        name: None,
                                                        value: Lambda {
                                                            params: [],
                                                            return_type: None,
                                                            body: [
                                                                Expr {
                                                                    expr: Call {
                                                                        callee: Ident {
                                                                            name: "say",
                                                                            span: 68..75,
                                                                        },
                                                                        args: [
                                                                            AstArg {
                                                                                name: None,
                                                                                value: Ident {
                                                                                    name: "_narrator",
                                                                                    span: 14..22,
                                                                                },
                                                                                span: 68..75,
                                                                            },
                                                                            AstArg {
                                                                                name: None,
                                                                                value: StringLit {
                                                                                    value: "Me too.",
                                                                                    span: 68..75,
                                                                                },
                                                                                span: 68..75,
                                                                            },
                                                                        ],
                                                                        span: 68..75,
                                                                    },
                                                                    span: 68..75,
                                                                },
                                                            ],
                                                            span: 62..77,
                                                        },
                                                        span: 62..77,
                                                    },
                                                ],
                                                span: 62..77,
                                            },
                                        ],
                                        span: 32..79,
                                    },
                                    span: 32..79,
                                },
                            ],
                            span: 32..79,
                        },
                        span: 32..79,
                    },
                ],
                span: 0..81,
            },
        ),
    ],
}
