writ-compiler/tests/snapshots/lowering_tests__dlg_code_escape_statement.snap
---
source: writ-compiler/tests/lowering_tests.rs
expression: ast
---
Ast {
    items: [
        Fn(
            AstFnDecl {
                attrs: [],
                vis: None,
                name: "example",
                name_span: 4..11,
                generics: [],
                params: [],
                return_type: None,
                body: [
                    Let {
                        mutable: false,
                        name: "_narrator",
                        name_span: 17..25,
                        ty: None,
                        value: GenericCall {
                            callee: MemberAccess {
                                object: Ident {
                                    name: "Entity",
                                    span: 17..25,
                                },
                                field: "getOrCreate",
                                field_span: 17..25,
                                span: 17..25,
                            },
                            type_args: [
                                Named {
                                    name: "Narrator",
                                    span: 17..25,
                                },
                            ],
                            args: [],
                            span: 17..25,
                        },
                        span: 17..25,
                    },
                    Expr {
                        expr: Call {
                            callee: Ident {
                                name: "say_localized",
                                span: 16..32,
                            },
                            args: [
                                AstArg {
                                    name: None,
                                    value: Ident {
                                        name: "_narrator",
                                        span: 17..25,
                                    },
                                    span: 16..32,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "b7d37fa2",
                                        span: 16..32,
                                    },
                                    span: 16..32,
                                },
                                AstArg {
                                    name: None,
                                    value: StringLit {
                                        value: "Hello.",
                                        span: 26..32,
                                    },
                                    span: 16..32,
                                },
                            ],
                            span: 16..32,
                        },
                        span: 16..32,
                    },
                    Let {
                        mutable: false,
                        name: "x",
                        name_span: 39..40,
                        ty: Some(
                            Named {
                                name: "int",
                                span: 42..45,
                            },
                        ),
                        value: IntLit {
                            value: 42,
                            span: 48..50,
                        },
                        span: 35..51,
                    },
                ],
                span: 0..53,
            },
        ),
    ],
}
